# backend/src/main/java/com/sebsach/electronicwebshop/cart/CartResponse.java
@@ -1,0 +1,17 @@
+package com.sebsach.electronicwebshop.cart;
+
+import com.sebsach.electronicwebshop.product.ProductResponse;
+import lombok.Builder;
+import lombok.Getter;
+import lombok.RequiredArgsConstructor;
+import lombok.Setter;
+
+import java.util.ArrayList;
+import java.util.List;
+
+@Builder
+@Setter
+@Getter
+public class CartResponse {
+    private List<ProductResponse> products;
+}
