# backend/src/main/java/com/sebsach/electronicwebshop/product/ProductController.java
@@ -1,7 +1,7 @@
 package com.sebsach.electronicwebshop.product;
 
 import com.sebsach.electronicwebshop.BackendApplication;
-import com.sebsach.electronicwebshop.PageResponse;
+import com.sebsach.electronicwebshop.dto.PageResponse;
 import lombok.RequiredArgsConstructor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -9,26 +9,28 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.List;
-
 @RestController
-@RequestMapping("product")
+@RequestMapping(value = "product", produces = "application/json")
 @RequiredArgsConstructor
 public class ProductController {
-    private static final Logger log = LoggerFactory.getLogger(BackendApplication.class);
     private final ProductService productService;
 
-    @GetMapping(produces = "application/json")
+    @GetMapping(value = "all")
     public ResponseEntity<PageResponse<ProductResponse>> getAllProducts(
             @RequestParam(name = "page", defaultValue = "0", required = false) int page,
-            @RequestParam(name = "size", defaultValue = "10", required = false) int size,
-            Authentication connectedUser
+            @RequestParam(name = "size", defaultValue = "10", required = false) int size
     ) {
         return ResponseEntity.ok(productService.findAllProducts(page, size));
     }
+    @GetMapping(value = "/{productId}")
+    public ResponseEntity<ProductResponse> getProductById(
+            @PathVariable(name = "productId") int productId
+    ) {
+        return ResponseEntity.ok(productService.findProductById(productId));
+    }
 
     @PostMapping("/add")
-    public ResponseEntity<?> addOrUpdateProduct(@RequestBody ProductRequest request) {
-        return ResponseEntity.ok(productService.add(request));
+    public ResponseEntity<ProductResponse> addOrUpdateProduct(@RequestBody ProductRequest request) {
+        return ResponseEntity.ok(ProductMapper.toProductResponse(productService.add(request)));
     }
 }
